# pgRenderCore

./: .gitignore  CMakeLists.txt  PGRenderCoreConfig.cmake.in  README.md
backends/glfw/: CMakeLists.txt
backends/glfw/include/: glfwApp.h  glfwContext.h  glfwEventSystem.h  glfwFeatures.h  glfwInputSystem.h  glfwLibraryContext.h  glfwWindow.h  glfwWindowManager.h
backends/glfw/src/: glfwApp.cpp  glfwContext.cpp  glfwEventSystem.cpp  glfwInputSystem.cpp  glfwLibraryContext.cpp  glfwWindow.cpp  glwfWindowManager.cpp
backends/sdl3/: CMakeLists.txt
backends/sdl3/include/: sdl3App.h  sdl3Context.h  sdl3EventSystem.h  sdl3Features.h  sdl3InputSystem.h  sdl3LibraryContext.h  sdl3Window.h  sdl3WindowManager.h
backends/sdl3/src/: sdl3App.cpp  sdl3Context.cpp  sdl3EventSystem.cpp  sdl3Features.cpp  sdl3InputSystem.cpp  sdl3LibraryContext.cpp  sdl3Window.cpp  sdl3WindowManager.cpp
cmake/: Dependencies.cmake  PGRenderCoreConfig.cmake.in
core/: CMakeLists.txt
core/include/pgrender/: app.h  eventSystem.h  inputSystem.h  renderCore.h  renderCoreFactory.h  threadSafeQueue.h  types.h  window.h  windowManager.h
core/src/: eventSystem.cpp  windowManager.cpp
coreApp/: CMakeLists.txt
coreApp/include/pgrender/: app.h  eventSystem.h  graphicsContext.h  inputSystem.h  threadSafeQueue.h  types.h  window.h  windowManager.h
coreApp/src/: windowManager.cpp
coreRender/: CMakeLists.txt
coreRender/include/PGRenderCore/: backendType.h  bufferObject.h  context.h  debugManager.h  device.h  pipeline.h  raytracingStructures.h  renderPass.h  renderTarget.h  sampler.h  shader.h  stateConstants.h  texture.h  vertexArray.h  vertexLayout.h
coreRender/src/: vertexLayout.cpp
examples/: CMakeLists.ejempo.txt  CMakeLists.txt  backend_selection.cpp  basic_window.cpp  multi_window.cpp  per_window_events.cpp  shared_contexts.cpp  show_window_opts.cpp  simple.cpp
factory/: CMakeLists.txt
factory/include/: appFactory.h  renderCoreFactory.h
factory/src/: appFactory.cpp
frontends/gl4/: CMakeLists.txt
frontends/gl4/include/PGRenderCoreGL/: bufferObjectGL.h  contextGL.h  debugManagerGL.h  deviceGL.h  pipelineGL.h  renderPassGL.h  renderTargetGL.h  samplerGL.h  shaderGL.h  textureGL.h  vertexArrayGL.h
frontends/gl4/src/: bufferObjectGL.cpp  contextGL.cpp  debugManagerGL.cpp  deviceGL.cpp  pipelineGL.cpp  renderPassGL.cpp  renderTargetGL.cpp  samplerGL.cpp  shaderGL.cpp  textureGL.cpp  vertexArrayGL.cpp
tests/: CMakeLists.txt  main.cpp
tests/integration/: test_context_creation.cpp  test_display_management.cpp  test_event_filtering.cpp  test_event_system.cpp  test_input_system.cpp  test_multi_window.cpp  test_shared_contexts.cpp  test_window_creation.cpp  test_window_states.cpp
tests/unit/: test_event_queue.cpp  test_types.cpp  test_window_config.cpp
